fixed overflow

--- a/style.css
+++ b/style.css
@@ -74,6 +74,8 @@ button:hover{
     width: 40%;
     padding: 3vh;
     box-sizing: border-box;
+    display: flex;
+    overflow: auto;
 }
 
 #results:hover{
